[project]
name = "bestrechargeplanfinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.8",
    "glom>=25.12.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.34",
    "streamlit>=1.50.0",
    "uvicorn>=0.39.0",
]
